--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Quote Generator</h1>
+    <h1>Hi Alex!</h1>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
