--- a/index.html
+++ b/index.html
@@ -16,7 +16,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hi Alex!</h1>
+    <div class="quote-container" id="quote-container">
+      <!-- Quote -->
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+          corrupti, perspiciatis repellendus sequi magni saepe?
+        </span>
+      </div>
+      <!-- Author -->
+      <div class="quote-author">
+        <span id="author">Buddha</span>
+      </div>
+      <!-- Button -->
+      <div class="button-container">
+        <button class="twitter" id="twitter" title="Tweet this!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+      </div>
+    </div>
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
