--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
       <!-- Quote -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-          corrupti, perspiciatis repellendus sequi magni saepe?
-        </span>
+        <span id="quote"></span>
       </div>
       <!-- Author -->
       <div class="quote-author">
-        <span id="author">Buddha</span>
+        <span id="author"></span>
       </div>
       <!-- Button -->
       <div class="button-container">
