Cors error fixed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       </div>
     </div>
     <!-- Loader -->
-    <div class="loader" id="loader"></div>
+    <div class="loader" id="loader">
+      <h1>Wait...</h1>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
